--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,11 +2,14 @@ ext {
     // Build configuration
     buildToolsVersion = '27.0.2'
     minSdkVersion = 15
-    compileSdkVersion = 27
-    targetSdkVersion = 27
+    compileSdkVersion = 28
+    targetSdkVersion = 28
 
     // Gradle plugin
     androidPluginVersion = '3.5.1'
+
+    // kotlin extension, library -> 코틀린 버전 지정
+    kotlinVersion = '1.3.50'
 
     // Library
     glideVersion = '4.1.1'
