--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
+GITHUB_CLIENT_ID="033f236ed8704dc30311"
+GITHUB_CLIENT_SECRET="938546f510153f55bd054ad353140939a61afa2c"
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
