--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-buildscript { 
+buildscript {
     ext.kotlin_version = '1.3.50'
 
     // dependencies.gradle 파일에 정의된 내용을 모든 프로젝트에서 사용할 수 있도록 하는 buildscript
@@ -17,6 +17,7 @@ buildscript {
 
         // 코틀린 gradle 플러그인을 추가
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
