--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,16 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
 GITHUB_CLIENT_ID="033f236ed8704dc30311"
 GITHUB_CLIENT_SECRET="938546f510153f55bd054ad353140939a61afa2c"
+GITHUB_CLIENT_ID_KOTLIN="f881aa8e0df2d49a3b34"
+GITHUB_CLIENT_SECRET_KOTLIN="dbfd1c734632ca9726f5262672cc01a53c4fbd52"
+GITHUB_CLIENT_ID_MVP="79a14028d207edf3d0ab"
+GITHUB_CLIENT_SECRET_MVP="dc0efe79501e8208eb57f0f86b0f9f024f1d8c43"
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
