--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,14 @@
 ext {
-    // Build configuration
     buildToolsVersion = '27.0.2'
     minSdkVersion = 15
     compileSdkVersion = 28
     targetSdkVersion = 28
 
-    // Gradle plugin
     androidPluginVersion = '3.5.1'
-
-    // kotlin extension, library -> 코틀린 버전 지정
     kotlinVersion = '1.3.50'
+    rxAndroidVersion = '2.0.1'
+    rxJavaVersion = '2.1.3'
 
-    // Library
     glideVersion = '4.10.0'
     gsonVersion = '2.7'
     okHttpVersion = '3.8.1'
