--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,6 @@
 ext {
     buildToolsVersion = '27.0.2'
-    minSdkVersion = 15
+    minSdkVersion = 17
     compileSdkVersion = 28
     targetSdkVersion = 28
 
@@ -8,11 +8,13 @@ ext {
     kotlinVersion = '1.3.50'
     rxAndroidVersion = '2.1.0'
     rxJavaVersion = '2.1.3'
+    rxBindingVersion = '3.0.0'
     archComponentVersion = '1.1.1'
+    daggerVersion = '2.25.2'
 
     glideVersion = '4.10.0'
-    gsonVersion = '2.7'
-    okHttpVersion = '3.8.1'
-    retrofitVersion = '2.3.0'
+    gsonVersion = '2.8.6'
+    okHttpVersion = '4.2.2'
+    retrofitVersion = '2.6.2'
     supportLibVersion = '27.0.2'
 }
