--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,6 +8,7 @@ ext {
     kotlinVersion = '1.3.50'
     rxAndroidVersion = '2.1.1'
     rxJavaVersion = '2.1.3'
+    rxBindingVersion = '3.0.0'
     archComponentVersion = '1.1.1'
 
     glideVersion = '4.10.0'
