--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,7 @@ ext {
     rxJavaVersion = '2.1.3'
     rxBindingVersion = '3.0.0'
     archComponentVersion = '1.1.1'
+    daggerVersion = '2.25.2'
 
     glideVersion = '4.10.0'
     gsonVersion = '2.7'
