--- a/sample-github-rx/build.gradle
+++ b/sample-github-rx/build.gradle
@@ -61,16 +61,20 @@ dependencies {
     implementation "com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:$rxBindingVersion"
     implementation "com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:$rxBindingVersion"
     implementation "com.jakewharton.rxbinding3:rxbinding-viewpager:$rxBindingVersion"
-    
     implementation "android.arch.lifecycle:extensions:$archComponentVersion"
     implementation "android.arch.persistence.room:runtime:$archComponentVersion"
     implementation "android.arch.persistence.room:rxjava2:$archComponentVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.google.dagger:dagger-android:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
     implementation 'androidx.browser:browser:1.0.0'
 
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     kapt "android.arch.lifecycle:compiler:$archComponentVersion"
     kapt "android.arch.persistence.room:compiler:$archComponentVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
 
 }
